<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_default">

        <TextView
            style="@style/page_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_default"
            android:text="@string/self_input_title" />

        <EditText
            android:id="@+id/et_barcode_inputF"
            style="@style/form_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_default"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_barcode_inputF_cancel"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_narrow"
                android:text="@string/cancel"
                android:textColor="@color/main_color" />

            <TextView
                android:id="@+id/tv_barcode_inputF_accept"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_narrow"
                android:text="@string/accept"
                android:textColor="@color/main_color" />
        </LinearLayout>

    </LinearLayout>
</layout>