<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".present.views.main.mypage.NotiSettingFragment">

        <TimePicker
            android:id="@+id/timepicker_noti_settingF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_noti_settingF_expiry_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_24"
            android:hint="1"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/tv_noti_settingF"
            app:layout_constraintTop_toBottomOf="@id/timepicker_noti_settingF" />

        <TextView
            android:id="@+id/tv_noti_settingF"
            style="@style/body_text"
            android:layout_marginEnd="@dimen/activity_margin_24"
            android:text="@string/noti_setting_offset"
            app:layout_constraintBottom_toBottomOf="@id/et_noti_settingF_expiry_offset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_noti_settingF_expiry_offset" />

        <TextView
            style="@style/body_text"
            android:layout_marginStart="@dimen/activity_margin_24"
            android:text="@string/noti_setting_offset_label"
            app:layout_constraintBottom_toBottomOf="@id/et_noti_settingF_expiry_offset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_noti_settingF_expiry_offset" />

        <TextView
            style="@style/body_text"
            android:layout_marginStart="@dimen/activity_margin_24"
            android:text="@string/noti_setting_activation_label"
            app:layout_constraintBottom_toBottomOf="@id/switch_noti_settingF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/switch_noti_settingF" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_noti_settingF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_24"
            android:layout_marginEnd="@dimen/activity_margin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_noti_settingF_expiry_offset" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_noti_settingF_save"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin_wide"
            android:layout_marginBottom="@dimen/activity_margin_24"
            android:background="@drawable/bg_ellipse_filled_main_color_32"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_noti_settingF_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_noti_settingF_cancel"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin_wide"
            android:layout_marginBottom="@dimen/activity_margin_24"
            android:background="@drawable/bg_ellipse_outline_main_color_32"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_noti_settingF_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>