<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_default"
            android:layout_marginBottom="@dimen/activity_margin_wide"
            android:text="@string/help_msg_barcode_scan"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <androidx.camera.view.PreviewView
            android:id="@+id/prev_barcodeF_camera"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

        </androidx.camera.view.PreviewView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_wide"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_barcodeF_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_margin_default"
                android:paddingTop="@dimen/activity_margin_default"
                android:paddingBottom="@dimen/activity_margin_default"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size_big" />

            <TextView
                android:id="@+id/tv_barcode_scanF_self_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/activity_margin_default"
                android:paddingRight="@dimen/activity_margin_default"
                android:paddingBottom="@dimen/activity_margin_default"
                android:text="@string/self_input"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size_big" />
        </LinearLayout>

    </LinearLayout>
</layout>