<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.andback.pocketfridge.present.views.main.mypage.userdelete.UserDeleteViewModel" />
        <variable
            name="name"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".present.views.main.mypage.userdelete.UserDeleteFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/al_my_pageF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_my_pageF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/delete_user"
                app:navigationIcon="@drawable/ic_close"/>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_margin_wide"
            android:layout_marginHorizontal="@dimen/activity_margin_default"
            app:layout_constraintTop_toBottomOf="@+id/al_my_pageF">

            <TextView
                style="@style/page_title_text"
                android:textStyle="bold"
                android:text="@{name + @string/delete_user_guide1}"
                tools:text="@string/delete_user_guide1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_margin_default">

                <TextView
                    style="@style/body_text"
                    android:text="⦁  "/>

                <TextView
                    style="@style/body_text"
                    android:text="@string/delete_user_guide2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/body_text"
                    android:text="⦁  "/>

                <TextView
                    style="@style/body_text"
                    android:text="@string/delete_user_guide3"/>
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_user_deleteF_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin_default"
            android:layout_marginBottom="@dimen/activity_margin_narrow"
            android:text="@string/delete_user_guide4"
            android:buttonTint="@color/main_color"
            app:layout_constraintBottom_toTopOf="@+id/btn_user_deleteF"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/btn_user_deleteF"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_margin_default"
            android:background="@drawable/bg_ellipse_filled_main_color_32"
            android:text="@string/delete_user"
            android:textColor="@color/white"
            android:enabled="false"
            android:onClick="@{()->vm.onDeleteUserClick()}"
            app:backgroundTint="@color/gray_non_clickable_button"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_opaque_screen"
            android:elevation="6dp"
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <com.airbnb.lottie.LottieAnimationView
            setLottiePlay="@{vm.isLoading()}"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:elevation="8dp"
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_loading"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>