<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.andback.pocketfridge.present.views.main.mypage.useredit.ConfirmPWViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".present.views.main.mypage.useredit.ConfirmPWFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/edit_user"
                app:navigationIcon="@drawable/ic_back"/>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            style="@style/body_text"
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/activity_margin_wide"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/confirm_pw_guide" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_pwF_nickname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin_wide"
            android:layout_marginBottom="@dimen/activity_margin_default"
            android:hint="비밀번호"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_pwF_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{vm.pw}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_confirm_pwF_accept"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/activity_margin_wide"
            android:background="@drawable/bg_ellipse_filled_main_color_32"
            android:text="@string/accept"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>