<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin_default">

            <TextView
                style="@style/page_title_text"
                android:layout_weight="1"
                android:text="@string/ingre_upload"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_bottom_sheetF_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_default"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_sheetF_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin_default">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_barcode_24" />

            <TextView
                style="@style/body_text"
                android:layout_marginLeft="@dimen/activity_margin_wide"
                android:layout_weight="1"
                android:text="@string/select_text_barcode" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_sheetF_upload_ingre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin_default"
            android:layout_marginBottom="56dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_input_24" />

            <TextView
                style="@style/body_text"
                android:layout_marginLeft="@dimen/activity_margin_wide"
                android:layout_weight="1"
                android:text="@string/select_text_input" />
        </LinearLayout>

    </LinearLayout>
</layout>